style.scss
---
---

//
// IMPORTS
//

@import "reset";
@import "variables";
// Syntax highlighting @import is at the bottom of this file

/**************/
/* BASE RULES */
/**************/

html {
  font-size: 100%;
}

body {
  font: $smaller $helveticaNeue;
  letter-spacing: -.1px;
  line-height: 1.4;
  color: $darkGray;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  background-color: $white;

  &.home {
    background: $blue;
    background: linear-gradient($blue, $darkerBlue);
  }
}

.preload * {
  transition: none !important;
}

.container {
  margin: 0 auto;
  min-width: 320px;
  max-width: 960px;
  padding: 0 10px;
  width: 100%;

  @include mobile {
    padding: 0 20px;
  }
}

h1, h2, h3, h4, h5, h6 {
  font-family: $rubik;
  color: $darkBlue;
  font-weight: 700;
  letter-spacing: -.3px;
  line-height: 1.2;
  margin: 1em 0 15px;
  padding: 0;
}

h1 {
  font-size: $bigger;
  a {
    color: inherit;
  }

  @include mobile {
    font-size: $big;
  }
}

h2 {
  font-size: $big;

  @include mobile {
    font-size: $medium;
  }
}

h3 {
  font-size: $medium;

  @include mobile {
    font-size: $small;
  }
}

h4 {
  font-size: $small;
  color: $lightGray;

  @include mobile {
    font-size: $smaller;
  }
}

p {
  margin: 15px 0;
}

a {
  color: $lightBlue;
  text-decoration: none;
	cursor: pointer;
  transition: background-color .15s ease-in-out, border-color .15s ease-in-out, color .15s ease-in-out, opacity .15s ease-in-out;
  &:hover, &:active {
    color: $lightGray;
  }
}

ul, ol {
  margin: 15px 0;
  padding-left: 30px;
}

ul {
  list-style-type: disc;
}

ol {
  list-style-type: decimal;
}

ol ul, ul ol, ul ul, ol ol {
  margin: 0;
}

ul ul, ol ul {
  list-style-type: circle;
}

em, i {
  font-style: italic;
}

strong, b {
  font-weight: 700;
}

img {
  max-width: 100%;
}

// Fixes images in popup boxes from Google Translate
.gmnoprint img {
  max-width: none;
}

.date {
  font-size: $smallest;
  color: $lightGray;
}

// Nicolas Gallagher's micro clearfix hack
// http://nicolasgallagher.com/micro-clearfix-hack/
.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

/*********************/
/* LAYOUT / SECTIONS */
/*********************/

.wrapper-header {
  padding-bottom: 30px;
  margin-bottom: 50px;
  color: $lightestGray;
  background-color: $darkBlue;
  background-image: linear-gradient($blue, $darkerBlue);
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);

  &.home {
    height: 100%;
    height: 100vh;
    width: 100%;
    width: 100vw;
    margin: 0;
    box-shadow: none;
  }

  &.blog {
    color: $darkBlue;
    background-color: $white;
    background-image: none;
    box-shadow: none;
  }

  &.post {
    margin-bottom: 0;
  }

  @include mobile {
    padding-bottom: 20px;
    margin-bottom: 20px;
  }
}

// header

.site-avatar {
  float: left;
  width: 48px;
  height: 48px;
  margin-right: 15px;
  transition: transform .2s;
  &:hover {
    transform: scale(1.1);
  }

  @include mobile {
    display: none;
    float: left;
    margin: 0 auto;
    margin-right: 10px;
  }

  img {
    border-radius: 3px;
  }
}

.site-info {
  float: left;
  padding-top: 13px;

  @include mobile {
    float: left;
    display: block;
    margin: 0 auto;
    padding-top: 12px;
  }
}

.site-name {
  margin: 0;
  color: $lighterGray;
  cursor: pointer;
  font-family: $rubik;
  font-weight: 400;
  font-size: $smaller;
  letter-spacing: 1.4px;
  word-spacing: 2px;
  text-transform: uppercase;

  &.blog {
    color: $darkBlue;
    font-weight: 400;
  }
}

//
// Navigation
//

.navigation {
  padding: 20px 0;

  @include mobile {
    text-align: left;
  }
}

nav {
  float: right;
  margin-top: 11px;

  @include mobile {
    float: right;
    margin-right: 5px;
    font-size: $smallest;
  }

  a {
    margin-left: 20px;
    text-align: right;
    font-family: $rubik;
    font-size: $smallest;
    color: $lighterGray;
    font-weight: 300;
    letter-spacing: 1.2px;
    text-transform: uppercase;
  }

  &.blog {
    a {
      color: $darkBlue;

      &:hover, &:active {
        color: $lightGray;
      }
    }
  }
}

// Home Buttons

.cta-button {
  margin-top: 15px;
  margin-right: 10px;
  background-color: $lighterBlue;
  color: $darkBlue;
  border: 2px solid $lighterBlue;
  border-radius: 3px;
  padding: 15px 10px;
  display: inline-block;
  font-family: $rubik;
  font-size: $smaller;
  font-weight: 700;
  &:hover, &:active {
    color: $lighterGray;
  }

  &.blog {
    background-color: inherit;
    color: $lighterGray;
    border: 2px solid $lighterGray;
    font-weight: 400;
    &:hover, &:active {
      color: $lightBlue;
      border: 2px solid $lightBlue;
    }
  }

  @include mobile {
    font-size: $smallest;
  }
}

// Page

.page-info {
  margin-top: 50px;

  &.post {
    margin-top: 20px;
  }
}

.page-name {
  color: $lightestGray;
  font-weight: 700;
  font-size: $biggest;
  letter-spacing: 1px;
  margin-bottom: 20px;

  &.blog {
    color: $darkBlue;
    font-weight: 700;
    font-size: $massive;
    letter-spacing: -2px;
    margin-bottom: 15px;

    @include mobile {
      font-size: $biggest;
    }
  }

  &.home {
    @include mobile {
      font-size: $big;
    }
  }

  @include mobile {
    font-size: $medium;
    text-align: left;
  }
}

.page-subtitle {
  color: $lightestGray;
  font-size: $small;
  font-family: $rubik;
  max-width: 70%;

  &.blog {
    color: $darkerBlue;
    font-family: $rubik;
    font-size: $medium;

    @include mobile {
      font-size: $small;
    }
  }

  @include mobile {
    font-size: $smaller;
    text-align: left;
    max-width: 100%;
    padding-right: 20px;
  }
}

//
// .main
//

.main {
  &.home {
    position: fixed;
    top: 45%;
    transform: translateY(-50%);
  }
}

.posts > .post-preview {
  padding: 3%;
  margin-bottom: 1.8em;
  box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.12);
  border-radius: 3px;
  transition: 0.2s;
  &:hover, &:active {
    box-shadow: 3px 6px 24px rgba(0, 0, 0, 0.12);
    cursor: pointer;
    transform: scale(1.01);
  }

  h1 {
    font-size: $big;
    margin-top: 0px;
    margin-bottom: 10px;
  }
}

.posts > .post-preview:last-child {
  padding-bottom: 1em;
}

.post-content {
  h1 {
    font-size: $biggest;
    margin-top: 20px;

    @include mobile {
      font-size: $bigger;
    }
  }
}

.post-content > .entry {
  blockquote {
    margin: 1.8em .8em;
    border-left: 2px solid $lighterGray;
    padding: 0.1em 1em;
    color: $lightGray;
    font-style: italic;
  }

  h1 {
    font-size: $big;
    margin-top: 0px;
    margin-bottom: 10px;
  }

  figure {
    margin: 20px auto;
    text-align: center;
  }

  img {
    box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.12);
    border: solid 1px $lighterGray;
  }

  figcaption {
    font-size: $smallest;
    color: $lightGray;
  }

  hr {
    border-top: 4px dotted #c6d6d6;
    background-color: $white;
    width: 20px;
    text-align: center;
    margin: 20px auto;
  }

  .comments {
    margin-top: 10px;
  }
}

.small-link {
  font-size: $smallest;
}

 // Footer

.site-credit {
 font-size: $smallest;
 margin-top: 30px;
 color: $lightGray;
}

.wrapper-footer {
  margin-top: 50px;
  margin-bottom: 40px;
}

footer {
  padding: 20px 0;
  border-top: 1px solid $lighterGray;
  text-align: center;
}


// Newsletter

.wrapper-post-newsletter {
  text-align: center;
  margin-top: 30px;
}

.newsletter-subscribe {
  margin-top: 20px;
  font-size: $smaller;

  @include mobile {
    font-size: $smallest;
    text-align: center;
  }
}

.newsletter-subscribe-email-label {
  padding-left: 1px;

  @include mobile {
    padding-left: 5px;
  }
}

.newsletter-subscribe-email {
  margin-top: 10px;
  display: inline-block;
  height: 30px;
  width: 237px;
  border-radius: 8px;
  font-size: $smallest;
  border: solid 1px $blue;
  padding: .6em;

  @include mobile {
    font-size: 15px;
    width: 203px;
  }
}

.newsletter-subscribe-button {
  display: inline-block;
  height: 30px;
  cursor: pointer;
  letter-spacing: .03em;
  color: $lightestGray;
  font-size: $smallest;
  font-weight: 500;
  border-radius: 8px;
  border: none;
  background-color: $lighterBlue;
  transition: all .2s ease-in-out;
  -webkit-appearance: none;
  &:hover, &:active {
    background-color: $lightestBlue;
    background-image: linear-gradient(to right, $lightBlue, $lighterBlue, $lightestBlue);
    box-shadow: 0 4px 15px 0 rgba(49, 196, 190, 0.75);
    transition: all .2s ease-in-out;
  }

  @include mobile {
    font-size: 15px;
  }
}


// Settled on moving the import of syntax highlighting to the bottom of the CSS
// ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
@import "highlights";
@import "svg-icons";

